--- a/index.html
+++ b/index.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Job Portal</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Job Portal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <h1>JobPortal</h1>
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="login.html">Login</a>
-      <a href="signup.html">Sign Up</a>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <section class="hero">
-    <h2>Find Your Dream Job</h2>
-    <p>Search for internships, part-time jobs, and full-time opportunities.</p>
-    <input type="text" id="search-bar" placeholder="Search for jobs, skills, or companies...">
-    <button id="search-btn">Search</button>
-  </section>
+    <section class="hero">
+        <h1>Welcome to the Job Portal</h1>
+        <p>Find your dream job today!</p>
+        <a href="jobs.html" class="button">Explore Jobs</a>
+    </section>
 
-  <section class="job-listings">
-    <h3>Featured Jobs</h3>
-    <div class="job-card">
-      <h4>Software Developer</h4>
-      <p>Company: XYZ Ltd.</p>
-      <p>Location: Remote</p>
-      <button class="apply-btn">Apply</button>
-    </div>
-    <div class="job-card">
-      <h4>Marketing Intern</h4>
-      <p>Company: ABC Corp.</p>
-      <p>Location: Mumbai</p>
-      <button class="apply-btn">Apply</button>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 JobPortal. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <footer>
+        <p>&copy; 2025 Job Portal</p>
+    </footer>
 </body>
 </html>
