--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<html lang="en-US">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-    <meta property="og:title" content="Job Portal" />
-    <meta property="og:description" content="Find your dream job today!" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" />
-    <title>Job Portal</title>
-    <script src="script.js" defer></script>
+    <title>Talentifyr - Job Portal</title>
 </head>
 <body>
-    <!-- Header Section -->
     <header>
         <nav>
             <ul>
@@ -25,16 +19,13 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
         <section class="hero">
-            <h1>Welcome to the Job Portal</h1>
-            <p>Find your dream job today!</p>
+            <h1>Welcome to Talentifyr</h1>
+            <p>Your dream job is just a click away!</p>
             <a href="jobs.html" class="button">Explore Jobs</a>
         </section>
 
-        <!-- Trending Jobs Section -->
         <section class="trending-jobs">
             <h2>Trending Jobs</h2>
             <div class="job-list">
@@ -66,26 +57,19 @@
                     <p>Salary: $60,000/year</p>
                     <a href="job-details.html" class="button">View Details</a>
                 </div>
-                <!-- Add more job cards as needed -->
             </div>
         </section>
     </main>
 
-    <!-- Footer Section -->
     <footer>
         <div class="footer-links">
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
             <a href="#">Contact Us</a>
         </div>
-        <p>&copy; 2025 Job Portal</p>
+        <p>&copy; 2025 Talentifyr</p>
     </footer>
 
-    <!-- JavaScript for interactivity -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Your JavaScript code here
-        });
-    </script>
+    <script src="script.js" defer></script>
 </body>
 </html>
