--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" />
-    <title>Login - Job Portal</title>
+    <title>Login - Talentifyr</title>
 </head>
 <body>
     <header>
@@ -21,34 +21,8 @@
 
     <main>
         <section class="login-section">
-            <h1>Login to Your Account</h1>
+            <h1>Login to Your Talentifyr Account</h1>
             <form id="login-form">
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required placeholder="john@example.com" />
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required placeholder="Enter your password" />
-                </div>
-                <button type="submit" class="button">Login</button>
-                <div class="form-footer">
-                    <p>Don't have an account? <a href="register.html">Register here</a></p>
-                    <p><a href="#">Forgot password?</a></p>
-                </div>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Contact Us</a>
-        </div>
-        <p>&copy; 2025 Job Portal</p>
-    </footer>
-
-    <script src="script.js" defer></script>
-</body>
-</html>
+                    <input type="email" id="email" name="email" required placeholder
