--- a/jobs.html
+++ b/jobs.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Listings</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" />
+    <title>Jobs - Talentifyr</title>
 </head>
 <body>
     <header>
@@ -18,15 +19,52 @@
         </nav>
     </header>
 
-    <section class="job-listing">
-        <h2>Job Listings</h2>
-        <div id="job-list"></div> <!-- Dynamically loaded job listings -->
-    </section>
+    <main>
+        <section class="job-listing">
+            <h1>Available Job Listings</h1>
+            <div class="job-list">
+                <div class="job-card">
+                    <h3>Software Engineer</h3>
+                    <p>Company: Tech Solutions</p>
+                    <p>Location: Remote</p>
+                    <p>Salary: $80,000/year</p>
+                    <a href="job-details.html" class="button">View Details</a>
+                </div>
+                <div class="job-card">
+                    <h3>Data Analyst</h3>
+                    <p>Company: Data Corp</p>
+                    <p>Location: New York</p>
+                    <p>Salary: $70,000/year</p>
+                    <a href="job-details.html" class="button">View Details</a>
+                </div>
+                <div class="job-card">
+                    <h3>Product Manager</h3>
+                    <p>Company: Innovative Solutions</p>
+                    <p>Location: San Francisco</p>
+                    <p>Salary: $95,000/year</p>
+                    <a href="job-details.html" class="button">View Details</a>
+                </div>
+                <div class="job-card">
+                    <h3>Graphic Designer</h3>
+                    <p>Company: Creative Minds</p>
+                    <p>Location: Remote</p>
+                    <p>Salary: $60,000/year</p>
+                    <a href="job-details.html" class="button">View Details</a>
+                </div>
+                <!-- Add more job cards as needed -->
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2025 Job Portal</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <p>&copy; 2025 Talentifyr</p>
     </footer>
 
-    <script src="jobs.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
