--- a/index.html
+++ b/index.html
@@ -1,75 +1,101 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="Talentifyr, Job Portal, Job Updates">
+    <meta name="description" content="Find the best job opportunities at Talentifyr. Stay updated with the latest openings.">
     <title>Talentifyr - Job Portal</title>
+
+    <link rel="stylesheet" href="//capp.nicepage.com/ca72254721c84ea1b5df2cc823afc6cb53f2252b/nicepage.css" media="screen">
+    <link rel="stylesheet" href="/nicepage-site.css" media="screen">
+    <link rel="stylesheet" href="style.css" media="screen"> <!-- You can add your custom CSS here -->
+    
+    <script class="u-script" type="text/javascript" src="//capp.nicepage.com/assets/jquery-3.5.1.min.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="//capp.nicepage.com/ca72254721c84ea1b5df2cc823afc6cb53f2252b/nicepage.js" defer=""></script>
+
+    <meta name="theme-color" content="#8a5cd9">
+    <meta property="og:title" content="Talentifyr - Job Portal">
+    <meta property="og:type" content="website">
+    
+    <script>
+        function gdprConfirmed() {
+            return true;
+        }
+
+        function dynamicLoadScript(src) {
+            var script = document.createElement('script');
+            script.src = src && typeof src === 'string' ? src : 'https://www.google.com/recaptcha/api.js?render=6LetPRgiAAAAAGX121nVdkYGTN-RfCXh4wAlbDFh';
+            script.async = true;
+            document.body.appendChild(script);
+            script.onload = function() {
+                let event = new CustomEvent("recaptchaLoaded");
+                document.dispatchEvent(event);
+            };
+        }
+        document.addEventListener('DOMContentLoaded', function () {
+            var confirmButton = document.querySelector('.u-cookies-consent .u-button-confirm');
+            if (confirmButton) {
+                confirmButton.onclick = dynamicLoadScript;
+            }
+        });
+    </script>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="jobs.html">Jobs</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Register</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section class="hero">
-            <h1>Welcome to Talentifyr</h1>
-            <p>Your dream job is just a click away!</p>
-            <a href="jobs.html" class="button">Explore Jobs</a>
-        </section>
-
-        <section class="trending-jobs">
-            <h2>Trending Jobs</h2>
-            <div class="job-list">
-                <div class="job-card">
-                    <h3>Software Engineer</h3>
-                    <p>Company: Tech Solutions</p>
-                    <p>Location: Remote</p>
-                    <p>Salary: $80,000/year</p>
-                    <a href="job-details.html" class="button">View Details</a>
+    <!-- Subscription Section -->
+    <section class="u-black u-clearfix u-section-1" id="sec-8774">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
+                <div class="u-container-layout u-valign-middle u-container-layout-1">
+                  <h2 class="u-text u-text-default u-text-1"> Get Job Updates and News to Your Inbox!</h2>
+                  <p class="u-text u-text-default u-text-2">Stay updated with the latest job openings at Talentifyr.</p>
                 </div>
-                <div class="job-card">
-                    <h3>Data Analyst</h3>
-                    <p>Company: Data Corp</p>
-                    <p>Location: New York</p>
-                    <p>Salary: $70,000/year</p>
-                    <a href="job-details.html" class="button">View Details</a>
+              </div>
+              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
+                <div class="u-container-layout u-valign-middle u-container-layout-2">
+                  <div class="u-expanded-width u-form u-form-1">
+                    <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-30 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
+                      <input type="hidden" id="siteId" name="siteId" value="6069102">
+                      <input type="hidden" id="pageId" name="pageId" value="299402210">
+                      <div class="u-form-email u-form-group">
+                        <label for="email-b77d" class="u-label">Email</label>
+                        <input type="email" placeholder="Enter a valid email address" id="email-b77d" name="email" class="u-border-no-left u-border-no-right u-border-no-top u-border-white u-input u-input-rectangle u-none" required="">
+                      </div>
+                      <div class="u-align-left u-form-group u-form-submit">
+                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-1-base u-btn-1">Submit</a>
+                        <input type="submit" value="submit" class="u-form-control-hidden">
+                      </div>
+                      <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+                      <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+                      <input type="hidden" value="" name="recaptchaResponse">
+                      <input type="hidden" name="formServices" value="4d5c690c-3075-cf97-86b3-f33c35a2caf3">
+                      <input type="hidden" name="siteKey" value="6LetPRgiAAAAAGX121nVdkYGTN-RfCXh4wAlbDFh">
+                    </form>
+                  </div>
                 </div>
-                <div class="job-card">
-                    <h3>Product Manager</h3>
-                    <p>Company: Innovative Solutions</p>
-                    <p>Location: San Francisco</p>
-                    <p>Salary: $95,000/year</p>
-                    <a href="job-details.html" class="button">View Details</a>
-                </div>
-                <div class="job-card">
-                    <h3>Graphic Designer</h3>
-                    <p>Company: Creative Minds</p>
-                    <p>Location: Remote</p>
-                    <p>Salary: $60,000/year</p>
-                    <a href="job-details.html" class="button">View Details</a>
-                </div>
+              </div>
             </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="footer-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Contact Us</a>
+          </div>
         </div>
-        <p>&copy; 2025 Talentifyr</p>
-    </footer>
+      </div>
+    </section>
 
-    <script src="script.js" defer></script>
+    <!-- Footer Section (optional) -->
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="#" target="_blank">
+        <span>HTML Template</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="#" target="_blank">
+        <span>Website Builder</span>
+      </a>. 
+    </section>
+
 </body>
 </html>
