--- a/index.html
+++ b/index.html
@@ -1,101 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="keywords" content="Talentifyr, Job Portal, Job Updates">
-    <meta name="description" content="Find the best job opportunities at Talentifyr. Stay updated with the latest openings.">
-    <title>Talentifyr - Job Portal</title>
-
-    <link rel="stylesheet" href="//capp.nicepage.com/ca72254721c84ea1b5df2cc823afc6cb53f2252b/nicepage.css" media="screen">
-    <link rel="stylesheet" href="/nicepage-site.css" media="screen">
-    <link rel="stylesheet" href="style.css" media="screen"> <!-- You can add your custom CSS here -->
-    
-    <script class="u-script" type="text/javascript" src="//capp.nicepage.com/assets/jquery-3.5.1.min.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="//capp.nicepage.com/ca72254721c84ea1b5df2cc823afc6cb53f2252b/nicepage.js" defer=""></script>
-
-    <meta name="theme-color" content="#8a5cd9">
-    <meta property="og:title" content="Talentifyr - Job Portal">
-    <meta property="og:type" content="website">
-    
-    <script>
-        function gdprConfirmed() {
-            return true;
-        }
-
-        function dynamicLoadScript(src) {
-            var script = document.createElement('script');
-            script.src = src && typeof src === 'string' ? src : 'https://www.google.com/recaptcha/api.js?render=6LetPRgiAAAAAGX121nVdkYGTN-RfCXh4wAlbDFh';
-            script.async = true;
-            document.body.appendChild(script);
-            script.onload = function() {
-                let event = new CustomEvent("recaptchaLoaded");
-                document.dispatchEvent(event);
-            };
-        }
-        document.addEventListener('DOMContentLoaded', function () {
-            var confirmButton = document.querySelector('.u-cookies-consent .u-button-confirm');
-            if (confirmButton) {
-                confirmButton.onclick = dynamicLoadScript;
-            }
-        });
-    </script>
+    <meta name="description" content="Talentifyr - Empowering Your Career Growth">
+    <title>Talentifyr - Empowering Your Career Growth</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
+    <script defer src="script.js"></script> <!-- Link to external JavaScript file -->
 </head>
 <body>
 
-    <!-- Subscription Section -->
-    <section class="u-black u-clearfix u-section-1" id="sec-8774">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout">
-            <div class="u-layout-row">
-              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <h2 class="u-text u-text-default u-text-1"> Get Job Updates and News to Your Inbox!</h2>
-                  <p class="u-text u-text-default u-text-2">Stay updated with the latest job openings at Talentifyr.</p>
-                </div>
-              </div>
-              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-2">
-                  <div class="u-expanded-width u-form u-form-1">
-                    <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-30 u-form-vertical u-inner-form" source="email" name="form" style="padding: 10px;">
-                      <input type="hidden" id="siteId" name="siteId" value="6069102">
-                      <input type="hidden" id="pageId" name="pageId" value="299402210">
-                      <div class="u-form-email u-form-group">
-                        <label for="email-b77d" class="u-label">Email</label>
-                        <input type="email" placeholder="Enter a valid email address" id="email-b77d" name="email" class="u-border-no-left u-border-no-right u-border-no-top u-border-white u-input u-input-rectangle u-none" required="">
-                      </div>
-                      <div class="u-align-left u-form-group u-form-submit">
-                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-palette-1-base u-btn-1">Submit</a>
-                        <input type="submit" value="submit" class="u-form-control-hidden">
-                      </div>
-                      <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-                      <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
-                      <input type="hidden" value="" name="recaptchaResponse">
-                      <input type="hidden" name="formServices" value="4d5c690c-3075-cf97-86b3-f33c35a2caf3">
-                      <input type="hidden" name="siteKey" value="6LetPRgiAAAAAGX121nVdkYGTN-RfCXh4wAlbDFh">
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <!-- Navigation Bar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="hero-content">
+            <h1>Welcome to Talentifyr</h1>
+            <p>Empowering your career growth with expert guidance and top opportunities.</p>
+            <a href="#services" class="cta-button">Explore Our Services</a>
         </div>
-      </div>
     </section>
 
-    <!-- Footer Section (optional) -->
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="#" target="_blank">
-        <span>HTML Template</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="#" target="_blank">
-        <span>Website Builder</span>
-      </a>. 
+    <!-- About Section -->
+    <section id="about">
+        <div class="content-container">
+            <h2>About Talentifyr</h2>
+            <p>At Talentifyr, we help individuals achieve their career goals by connecting them with the right opportunities and resources. Our personalized services ensure that you are equipped with the tools to succeed in today's dynamic job market.</p>
+        </div>
     </section>
+
+    <!-- Services Section -->
+    <section id="services">
+        <div class="content-container">
+            <h2>Our Services</h2>
+            <div class="service-box">
+                <h3>Career Coaching</h3>
+                <p>Get one-on-one coaching to refine your skills and build a successful career plan.</p>
+            </div>
+            <div class="service-box">
+                <h3>Job Placement Assistance</h3>
+                <p>We connect you with top employers and help you secure the best-fit job opportunities.</p>
+            </div>
+            <div class="service-box">
+                <h3>Resume Building</h3>
+                <p>Professional resume writers help you craft the perfect resume that stands out.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="content-container">
+            <h2>Contact Talentifyr</h2>
+            <form action="#" method="POST">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Talentifyr. All Rights Reserved.</p>
+    </footer>
 
 </body>
 </html>
