--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Awesome Site</title>
+    <title>Talentifyr</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 My Awesome Site</p>
+        <p>&copy; 2025 Talentifyr</p>
     </footer>
 
     <script src="script.js"></script>
